--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -120,7 +120,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=raw,value=latest,enable=${{ (startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_call' && startsWith(inputs.version, 'v'))) && !contains(inputs.version || github.ref, '-') }}
+            type=raw,value=latest,enable=${{ steps.version.outputs.is_semver == 'true' && inputs.version != 'edge' }}
             
             # For manual builds with latest tag - explicit version tags
             # For manual edge builds
