feat: add universal metadata converter and HTTP output
- Add utils.UniversalMetadata struct for consistent metadata handling
- Create utils.ConvertMetadata() and ConvertMetadataWithType() functions
- Implement HTTP output with multiple response formats (JSON, XML, YAML, plaintext)
- Add flexible HTTP endpoints with custom payload mapping support
- Integrate WebSocket routes into main web server (remove separate ports)
- Refactor all outputs to use universal converter (eliminates duplicate field mapping)
- Update documentation with universal converter patterns and HTTP output examples

--- a/config-example.json
+++ b/config-example.json
@@ -128,8 +128,7 @@
       "formatters": ["ucwords"],
       "settings": {
         "delay": 0,
-        "address": ":8080",
-        "path": "/metadata"
+        "path": "/ws/metadata"
       }
     },
     {
@@ -139,14 +138,54 @@
       "formatters": ["ucwords"],
       "settings": {
         "delay": 0,
-        "address": ":8081",
-        "path": "/ws",
+        "path": "/ws/custom",
         "payloadMapping": {
           "event": "{{.type}}",
           "station": "Your Radio Station",
           "message": "Now playing: {{.title}} by {{.artist}}",
           "timestamp": "{{.updated_at}}"
         }
+      }
+    },
+    {
+      "type": "http",
+      "name": "metadata-api",
+      "inputs": ["radio-live", "nowplaying-api", "default-text"],
+      "formatters": ["ucwords"],
+      "settings": {
+        "delay": 0,
+        "endpoints": [
+          {
+            "path": "/api/nowplaying.json",
+            "responseType": "json"
+          },
+          {
+            "path": "/api/nowplaying.xml",
+            "responseType": "xml"
+          },
+          {
+            "path": "/api/current.txt",
+            "responseType": "plaintext"
+          },
+          {
+            "path": "/api/nowplaying.yaml",
+            "responseType": "yaml"
+          },
+          {
+            "path": "/api/custom.json",
+            "responseType": "json",
+            "payloadMapping": {
+              "station": "Your Radio Station",
+              "current_track": {
+                "title": "{{.title}}",
+                "artist": "{{.artist}}",
+                "duration": "{{.duration}}"
+              },
+              "last_updated": "{{.updated_at}}",
+              "status": "live"
+            }
+          }
+        ]
       }
     }
   ]
