--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,6 @@ jobs:
         with:
           version: latest
           args: --timeout=5m
+      
+      - name: Check for dead code
+        run: go run golang.org/x/tools/cmd/deadcode@latest ./...
