feat: replace POST output with URL output (#23)

--- a/config-example.json
+++ b/config-example.json
@@ -75,24 +75,26 @@
       }
     },
     {
-      "type": "post",
+      "type": "url",
       "name": "webhook-default",
       "inputs": ["radio-live", "nowplaying-api", "default-text"],
       "formatters": ["ucwords"],
       "settings": {
         "delay": 1,
         "url": "https://api.example.com/metadata",
+        "method": "POST",
         "bearerToken": "your-bearer-token-here"
       }
     },
     {
-      "type": "post",
+      "type": "url",
       "name": "webhook-custom",
       "inputs": ["radio-live", "nowplaying-api", "default-text"],
       "formatters": ["lowercase"],
       "settings": {
         "delay": 0,
         "url": "https://api.example.com/custom-metadata",
+        "method": "POST",
         "bearerToken": "your-bearer-token-here",
         "payloadMapping": {
           "station": "Your Radio Station",
@@ -108,6 +110,18 @@
             "expires": "{{.expires_at}}"
           }
         }
+      }
+    },
+    {
+      "type": "url",
+      "name": "webhook-get",
+      "inputs": ["radio-live", "default-text"],
+      "formatters": ["ucwords"],
+      "settings": {
+        "delay": 1,
+        "url": "https://api.example.com/update?title={{.title}}&artist={{.artist}}&updated={{.updated_at}}",
+        "method": "GET",
+        "bearerToken": "your-bearer-token-here"
       }
     },
     {
