refactor: rename DLS Plus to DL Plus to match ETSI specification
Update terminology throughout codebase to use official ETSI TS 102 980
nomenclature. The specification defines "DL Plus" (Dynamic Label Plus)
not "DLS Plus".

Changes:
- Renamed DLSPlusOutput → DLPlusOutput
- Renamed DLSPlusOutputConfig → DLPlusOutputConfig
- Renamed outputs/dlsplus.go → outputs/dlplus.go
- Updated config type: "dlsplus" → "dlplus"
- Updated all documentation and comments

BREAKING CHANGE: Config files must update output type from "dlsplus"
to "dlplus".

--- a/config-example.json
+++ b/config-example.json
@@ -125,13 +125,13 @@
       }
     },
     {
-      "type": "dlsplus",
-      "name": "dlsplus-output",
+      "type": "dlplus",
+      "name": "dlplus-output",
       "inputs": ["radio-live", "nowplaying-api", "default-text"],
       "formatters": [],
       "settings": {
         "delay": 0,
-        "filename": "/tmp/dlsplus.txt"
+        "filename": "/tmp/dlplus.txt"
       }
     },
     {
