feat: add formatter chaining documentation and examples
- Document existing formatter chaining capability
- Add examples showing single and chained formatters
- Add secondary Icecast stream example with chaining
- Explain order matters in formatter chains

--- a/config-example.json
+++ b/config-example.json
@@ -65,6 +65,20 @@
       }
     },
     {
+      "type": "icecast",
+      "name": "secondary-stream",
+      "inputs": ["radio-live", "default-text"],
+      "formatters": ["rds", "uppercase"],
+      "settings": {
+        "delay": 2,
+        "server": "localhost",
+        "port": 8000,
+        "username": "source",
+        "password": "hackme",
+        "mountpoint": "/stream2"
+      }
+    },
+    {
       "type": "file",
       "name": "nowplaying-file",
       "inputs": ["radio-live", "radio-automation", "default-text"],
