ci: add govulncheck and golangci-lint config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,6 @@ jobs:
       
       - name: Check for dead code
         run: go run golang.org/x/tools/cmd/deadcode@latest ./...
+
+      - name: Run govulncheck
+        run: go run golang.org/x/vuln/cmd/govulncheck@latest ./...
