feat: add duration filter and rename suppress to pattern
Filters are now consistently named by the criterion they check:
- pattern: filter by text pattern (regex matching)
- duration: filter by track duration (minimum seconds threshold)

The duration filter skips metadata updates for tracks shorter than the
configured minimum, useful for filtering out jingles and bumpers.

Duration parsing has been moved to utils/duration.go for reuse between
the dynamic input expiration logic and the new duration filter.

--- a/config-example.json
+++ b/config-example.json
@@ -11,13 +11,13 @@
       "suffix": " 🎵",
       "filters": [
         {
-          "type": "suppress",
+          "type": "pattern",
           "field": "artist",
           "pattern": "^(Unknown Artist|Various Artists)$",
           "action": "clear"
         },
         {
-          "type": "suppress",
+          "type": "pattern",
           "field": "title",
           "pattern": "(?i)\\b(test|jingle|promo|advert)\\b",
           "action": "skip"
@@ -37,7 +37,7 @@
       "suffix": "",
       "filters": [
         {
-          "type": "suppress",
+          "type": "pattern",
           "field": "artist",
           "pattern": "^(Unknown Artist|Various Artists)$",
           "action": "clear"
